// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VhCard.vue renders blue header background 1`] = `
<div class="VhCard VhCard--block VhCard--blue">
  <div class="VhCard-default"></div>
  <div class="VhCard-header"></div>
  <div class="VhCard-content">
    <div class="VhCard-title"></div>
  </div>
  <div class="VhCard-action"></div>
</div>
`;

exports[`VhCard.vue renders default VhCard 1`] = `
<div class="VhCard">
  <div class="VhCard-default"></div>
  <div class="VhCard-header"></div>
  <div class="VhCard-content">
    <div class="VhCard-title"></div>
  </div>
  <div class="VhCard-action"></div>
</div>
`;

exports[`VhCard.vue renders red header background 1`] = `
<div class="VhCard VhCard--red">
  <div class="VhCard-default"></div>
  <div class="VhCard-header"></div>
  <div class="VhCard-content">
    <div class="VhCard-title"></div>
  </div>
  <div class="VhCard-action"></div>
</div>
`;
